@@ -19,6 +19,7 @@
 	bugfix in inline functions : modifying a parameter can't modify a real local var anymore
 	bugfix in inline functions : handle class type parameters and method type parameters
 	fixed issue with Int default value for Float parameter
+	flash9 : bugfix when using the retval after setting a closure variable
 
 2008-10-04: 2.01
 	fixed php.Sys
